--- a/smartcamp/pom.xml
+++ b/smartcamp/pom.xml
@@ -92,6 +92,11 @@
 		</dependency>
 		
 		
+	<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <scope>runtime</scope>
+</dependency>
 
 	</dependencies>
 
