--- a/smartcamp/src/main/resources/application.properties
+++ b/smartcamp/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.servlet.context-path=/
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-spring.datasource.url=jdbc:mysql://localhost:3306/smartcamp
-spring.datasource.username=root
-spring.datasource.password=ankitS123@
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
@@ -17,8 +17,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=karansoni9752@gmail.com
-spring.mail.password=nprsdsvqppksyqzk
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
