--- a/smartcamp/Dockerfile
+++ b/smartcamp/Dockerfile
@@ -1,14 +1,5 @@
-# Use official Java runtime
-FROM openjdk:17-jdk-slim
-
-# Set working directory
+FROM openjdk:21-jdk-slim
 WORKDIR /app
-
-# Copy the jar (update the name if needed)
-COPY target/*.jar app.jar
-
-# Expose the port used by Spring Boot
+COPY smartcamp/target/*.jar app.jar
 EXPOSE 8080
-
-# Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
