--- a/smartcamp/pom.xml
+++ b/smartcamp/pom.xml
@@ -103,6 +103,7 @@
 	<build>
 		<plugins>
 			<plugin>
+				
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -125,8 +126,17 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				
 			</plugin>
+			<plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.4.2</version>
+    </plugin>
 		</plugins>
 	</build>
+	
+	
+	
 
 </project>
