--- a/smartcamp/src/main/resources/application.properties
+++ b/smartcamp/src/main/resources/application.properties
@@ -5,14 +5,15 @@ server.servlet.context-path=/
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-spring.datasource.url=jdbc:mysql://localhost:3306/smartcamp
-spring.datasource.username=root
-spring.datasource.password=ankitS123@
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/smartcamp
+#spring.datasource.username=root
+#spring.datasource.password=ankitS123@
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
+spring.profiles.active=${ENV:dev}
 
 
 spring.mail.host=smtp.gmail.com
