--- a/smartcamp/src/main/resources/application-prod.properties
+++ b/smartcamp/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/smartcamp
+spring.datasource.url=jdbc:mysql://root:isAwwZygwHdCCoxZkaphWOeirHtTmRGD@trolley.proxy.rlwy.net:23141/railway
 spring.datasource.username=root
-spring.datasource.password=ankitS123@
+spring.datasource.password=isAwwZygwHdCCoxZkaphWOeirHtTmRGD
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
