--- a/smartcamp/src/main/resources/application.properties
+++ b/smartcamp/src/main/resources/application.properties
@@ -7,9 +7,12 @@ spring.thymeleaf.suffix=.html
 
 
 
-spring.profiles.active=prod
-
-
+spring.datasource.url=jdbc:mysql://localhost:3306/smartcamp
+spring.datasource.username=root
+spring.datasource.password=ankitS123@
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=karansoni9752@gmail.com
